--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "git": "git subtree push --prefix dist origin gh-pages"
+    "git": "git subtree push --prefix dist origin gh-pages",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  },
-  "dependencies": {
-    "css-loader": "^7.1.1",
-    "style-loader": "^4.0.0"
   }
 }
